# ff-led-panel

./: .gitignore  Cargo.toml  README.md
docs/: openapi.html  openapi.yaml
src/: error.rs  panel.rs  server.rs  storage.rs  uart.rs
src/am03127/: delete.rs  mod.rs  realtime_clock.rs  schedule.rs
src/am03127/page_content/: formatting.rs  mod.rs
src/server/: dto.rs  layers.rs  mod.rs  routers.rs
