[package]
edition = "2021"
name    = "am03127-controller"
version = "0.1.0"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "log",
  "wifi",
] }
heapless = { version = "0.7.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
picoserve = { version = "0.15.1", features = ["embassy", "log"] }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
embassy-sync = { version = "0.6.2", features = ["log"] }
esp-storage = { version = "0.5.0", features = ["esp32c3", "nor-flash"] }
embedded-storage = "0.3.1"
embassy-embedded-hal = "0.3.0"
embedded-storage-async = "0.4.1"
sequential-storage = "4.0.1"
postcard = "1.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
